static/css/styles.css
/* ... */
header a.btn{
    margin-left: 21px;
}

header a.logo{
    display: block;
    position: absolute;
    top: 50%;
    width: 50px;
    transform: translateY(-50%);
    -webkit-transform: translateY(-50%);
    -moz-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
}

header a.logo img{
    max-width: 100%;
}

#open-menu{
    display: none;
}

/* mobile */
@media only screen and (max-width: 639px){
    header a.logo + a, header a.btn{
        display: none;
    }

    #open-menu{
        display: inline-block;
        width: 50px;
        height: 50px;
        border-radius: 50%;
        -webkit-border-radius: 50%;
        -moz-border-radius: 50%;
        padding: 0px;
        background-image: url("../icons/burger.svg");
        background-repeat: no-repeat;
        background-size: 24px;
        background-position: center;
    }
}
/* END OF HEADER */



/* HERO */
section.hero{
    padding: 20px 0px;
    /*background-image: linear-gradient(to bottom, #f1f4f7 55%, #ffffff);
    background-image: -webkit-linear-gradient(to bottom, #f1f4f7 55%, #ffffff);*/
}

section.hero h1{
    font-size: 60px;
    font-weight: 700;
    color: #311b58;
    text-align: left;
    width: 70%;
    margin-top: 300px;
    margin-bottom: 34px;
}

section.hero p{
    text-align: left;
    color:#1e1e1e;
    width:80%;
    font-size: 20px;
    line-height: 1.7;
    margin-bottom: 90px;
}

section.hero .btn{
    display: inline-block;
}

section.hero h2{
    color: #311b58;
    margin: 0px;
}

section.hero .col{
    width: 33.3%;
    text-align: left;
    float: left;
}

section.hero .col p{
    margin-top: 10px;
    font-size: 18px;
	line-height: 1.67;
    color:#311b58
}

section.hero div.container{
    position: relative;
}

div.circle{
    position: absolute;
    background-color: #311b58;
    border-radius: 50%;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
}

#circle-1{
    width: 295px;
    height: 300px;
    top: -139px;
    left: -86px;
    overflow: hidden;
}

#circle-1 span{
    font-size: 60px;
	font-weight: bold;
    text-align: left;
    display: block;
    position: absolute;
    color: white;
    top: 139px;
    left: 86px;
    width: 685px;
}

#circle-2{
    width: 84px;
    height: 84px;
    top: -140px;
    left: 290px;
}

#circle-3{
    width: 55px;
    height: 55px;
    top: 21px;
    right: 265px;
}

#circle-4{
    width: 34px;
    height: 34px;
    top: -80px;
    right: 141px;
}

#circle-5{
    width: 55px;
    height: 55px;
    top: -148px;
    left: 130px;
    overflow: hidden;
}

#circle-5::after{
    content: " ";
    position: absolute;
    width: 295px;
    height: 300px;
    background-color: #ffffff;
    border-radius: 50%;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    left: -216px;
    top: 9px;
}

/* small desktop */
@media only screen and (max-width: 1160px){
    #circle-3{
        right: 230px;
    }
}


/* tablet & mobile */
@media only screen and (max-width: 1023px){
    #circle-3{
        display: none;
    }

    section.hero{
        padding-bottom: 40px
    }

    section.hero p{
        width: 100%;
        margin-bottom: 30px;
    }

    section.hero .col{
        float: none;
        width: 100%;
        margin-bottom: 60px;
    }
}

/* mobile */
@media only screen and (max-width: 639px){

    section.hero h1{
        width: 100%;
        margin-top: 336px;
        font-size: 50px;
    }

    section.hero p{
        font-size: 18px;
        line-height: 1.67;
        color: #311b58;
    }

    #circle-1{
        top: -214px;
        left: -140px;
        width: 335px;
        height: 335px;
    }

    #circle-1 span{
        font-size: 50px;
        left: 140px;
        top: 214px;
    }

    #circle-2{
        left: initial;
        right: -49px;
        width: 94px;
        height: 94px;
        top: -165px;
    }

    #circle-4{
        display: none;
    }

    #circle-5{
        top: -220px;
        left: 91px;
    }

    #circle-5::after{
        left: -230px;
        top: 6px;
        width: 335px;
        height: 335px;
    }
}
/* END OF HERO */



/* IDENTITY MANAGER */
section.identity-manager{
    padding: 30px 0px;
    background-color: #f5f5f5;
    text-align: center;
}

section.identity-manager h2{
    font-size: 40px;
	font-weight: 700;
    color: #1e1e1e;
    margin: 10px 0px;
    margin-top: 177px;
}

section.identity-manager .btn{
    margin-bottom: 154px;
}

section.identity-manager .explore{
    display: inline-block;
    font-size: 14px;
	font-weight: 500;
	letter-spacing: 0.5px;
    color: #311b58;
    text-transform: uppercase;
    position: relative;
    cursor: pointer;
    padding: 20px;
}

section.identity-manager .explore::after{
    content:" ";
    position: absolute;
    top: 0px;
    left: 0px;
    background-image: url("../icons/chevron-down.svg");
    background-repeat: no-repeat;
    background-size: 18px;
    width: 18px;
    height: 18px;
    top: 48px;
    left: 50%;
    margin-left: -9px;
    transition: top 0.3s ease-in-out;
    -webkit-transition: top 0.3s ease-in-out;
    -moz-transition: top 0.3s ease-in-out;
    -o-transition: top 0.3s ease-in-out;
}

section.identity-manager .explore:hover::after{
    top: 53px;
}

/* tablet & mobile */
@media only screen and (max-width: 1023px){
    section.identity-manager .btn{
        margin-bottom: 100px;
    }
}

/* mobile */
@media only screen and (max-width: 639px){

    section.identity-manager h2{
        margin-top: 70px;
        margin-bottom: 20px;
    }

}
/* END OF IDENTITY MANAGER */



/* FEATURES */
section.features{
    padding: 100px 0px;
}

section.features .feature{
    padding: 100px 0px;
    position: relative;
}

section.features .feature img{
    float: left;
    max-width: 262px;
    width: 45%;
}

section.features .feature h2{
    margin-top: 18px;
    margin-bottom: 10px;
}

section.features .feature p{
    font-size: 18px;
	line-height: 1.67;
	text-align: left;
	color: #1e1e1e;
}
/* ... */

